--- a/package.json
+++ b/package.json
@@ -25,20 +25,20 @@
   "dependencies": {},
   "devDependencies": {
     "@types/chai": "^4.1.7",
-    "@types/jasmine": "^3.3.7",
+    "@types/jasmine": "^3.3.13",
     "@types/karma-fixture": "^0.2.5",
     "@types/pubsub-js": "^1.5.18",
     "@types/uglifyjs-webpack-plugin": "^1.1.0",
     "@types/webpack": "^4.4.23",
-    "@types/webpack-merge": "^4.1.3",
+    "@types/webpack-merge": "^4.1.5",
     "awesome-typescript-loader": "^5.2.1",
     "chai": "^4.2.0",
-    "del-cli": "^1.1.0",
-    "husky": "^1.3.1",
-    "jasmine": "^3.3.1",
-    "karma": "^3.1.1",
-    "karma-chrome-launcher": "^2.2.0",
-    "karma-cli": "^1.0.1",
+    "del-cli": "^2.0.0",
+    "husky": "^3.0.0",
+    "jasmine": "^3.4.0",
+    "karma": "4.2.0",
+    "karma-chrome-launcher": "^3.0.0",
+    "karma-cli": "^2.0.0",
     "karma-coverage": "^1.1.2",
     "karma-detect-browsers": "^2.3.3",
     "karma-edge-launcher": "^0.4.1",
@@ -49,16 +49,16 @@
     "karma-jasmine": "^2.0.1",
     "karma-json-fixtures-preprocessor": "0.0.6",
     "karma-safari-launcher": "^1.0.0",
-    "karma-typescript": "^4.0.0",
-    "lint-staged": "^7.3.0",
+    "karma-typescript": "^4.1.1",
+    "lint-staged": "^9.2.0",
     "merge": "^1.2.1",
     "pubsub-js": "^1.7.0",
-    "ts-node": "^8.0.1",
-    "tslint": "^5.11.0",
-    "typescript": "^3.2.4",
-    "uglifyjs-webpack-plugin": "^2.1.1",
-    "webpack": "^4.29.0",
-    "webpack-cli": "^3.2.1",
+    "ts-node": "^8.3.0",
+    "tslint": "^5.18.0",
+    "typescript": "^3.5.3",
+    "uglifyjs-webpack-plugin": "^2.1.3",
+    "webpack": "^4.35.3",
+    "webpack-cli": "^3.3.6",
     "webpack-merge": "^4.2.1"
   },
   "scripts": {
